--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,6 +23,12 @@ dist-ssr
 *.sln
 *.sw?
 
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Build output
 package-lock.json
-package.json
