--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview --port=443"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@formkit/tempo": "^0.1.2",
+    "@mui/material": "^7.2.0",
     "axios": "^1.7.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
