--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@formkit/tempo": "^0.1.2",    
+    "@formkit/tempo": "^0.1.2",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
     "js-cookie": "^3.0.5",
