--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@formkit/tempo": "^0.1.2",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.7.0",
     "axios": "^1.10.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
