--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
+    "sharp": "^0.32.6",
     "typeorm": "^0.3.20",
     "uuid": "^11.1.0"
   },
