--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.17.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sharp": "^0.32.6",
